--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -1,4 +1,4 @@
-name: Lighthouse
+name: Lighthouse CI
 on:
     workflow_dispatch:
 
@@ -6,15 +6,11 @@ jobs:
   lighthouse:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - run: mkdir -p ${{ github.workspace }}/tmp/artifacts
-    - name: Lighthouse
-      uses: foo-software/lighthouse-check-action@master
-      with:
-        outputDirectory: ${{ github.workspace }}/tmp/artifacts
-        urls: 'https://market.axonivy.com,https://market.axonivy.com/open-weather-connector'
-    - name: Upload artifacts
-      uses: actions/upload-artifact@master
-      with:
-        name: Lighthouse reports
-        path: ${{ github.workspace }}/tmp/artifacts
+      - uses: actions/checkout@v4
+      - name: Audit URLs using Lighthouse
+        uses: treosh/lighthouse-ci-action@v12
+        with:
+          urls: |
+            https://market.axonivy.com
+            https://market.axonivy.com/portal
+          uploadArtifacts: true
