--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -27,11 +27,11 @@ jobs:
           REPORT_DIR: "./lighthouse-reports"
         run: |
           mkdir -p $REPORT_DIR
-          lighthouse https://market.axonivy.com --output html --output-path $REPORT_DIR/market-axonivy.html --chrome-flags="--headless"
-          lighthouse https://market.axonivy.com/portal --output html --output-path $REPORT_DIR/market-axonivy-portal.html --chrome-flags="--headless"
+          lighthouse https://market.axonivy.com --output json --output html --output-path $REPORT_DIR/market-axonivy.html --chrome-flags="--headless"
+          lighthouse https://market.axonivy.com/portal --output json --output html --output-path $REPORT_DIR/market-axonivy-portal.html --chrome-flags="--headless"
 
       - name: Upload Lighthouse Reports
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: lighthouse-reports
           path: lighthouse-reports/
