--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Fetch Product Data and Generate URLs
         id: fetch-products
         run: |
-          API_URL="https://market.axonivy.com/marketplace-service/api/product?type=all&sort=standard&keyword=&language=en&page=0&size=20&isRESTClient=false"
+          API_URL="https://market.axonivy.com/marketplace-service/api/product?type=all&language=en&size=1000&isRESTClient=false"
           BASE_URL="https://market.axonivy.com"
 
           # Fetch API response
