--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -46,7 +46,12 @@ jobs:
           mkdir -p $REPORT_DIR
           # Split URLs and run Lighthouse audits
           for url in $URLS; do
-            REPORT_NAME=$(echo $url | sed 's|https://market.axonivy.com/||; s|/|-|g; s|^$|home|')
+            # Generate a valid report name
+            if [ "$url" = "https://market.axonivy.com" ]; then
+              REPORT_NAME="home"
+            else
+              REPORT_NAME=$(echo $url | sed 's|https://market.axonivy.com/||; s|/|-|g')
+            fi
             lighthouse $url --output html --output-path $REPORT_DIR/$REPORT_NAME.html --chrome-flags="--headless"
           done
 
