--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  lighthouse:
+  fetch-and-audit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -25,38 +25,64 @@ jobs:
       - name: Fetch Product Data and Generate URLs
         id: fetch-products
         run: |
-          API_URL="https://market.axonivy.com/marketplace-service/api/product?type=all&language=en&size=2&isRESTClient=false"
+          API_URL="https://market.axonivy.com/marketplace-service/api/product?type=all&language=en&size=1000&isRESTClient=false"
           BASE_URL="https://market.axonivy.com"
 
           # Fetch API response
           RESPONSE=$(curl -s $API_URL)
           
           # Build the list of URLs
-          URLS="$BASE_URL $(echo $RESPONSE | jq -r '.["_embedded"]["products"][]["id"]' | while read id; do
-            echo "$BASE_URL/$id"
-          done | tr '\n' ' ')"
+          echo "$BASE_URL" > urls.txt
+          echo $RESPONSE | jq -r '.["_embedded"]["products"][]["id"]' | while read id; do
+            echo "$BASE_URL/$id" >> urls.txt
+          done
 
-          echo "URLS=$URLS" >> $GITHUB_ENV
+      - name: Split URLs into Batches
+        id: split-urls
+        run: |
+          split -l 20 urls.txt batch_
+          echo "BATCHES=$(ls batch_ | tr '\n' ',')" >> $GITHUB_ENV
+        env:
+          BATCH_SIZE: 20
 
-      - name: Audit URLs using Lighthouse
+  lighthouse-audit:
+    needs: fetch-and-audit
+    strategy:
+      matrix:
+        batch: ${{ fromJson(env.BATCHES) }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install Chrome
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+
+      - name: Install Lighthouse
+        run: |
+          npm install -g lighthouse
+
+      - name: Run Lighthouse for Batch
         env:
           REPORT_DIR: "./lighthouse-reports"
-          URLS: ${{ env.URLS }}
         run: |
           mkdir -p $REPORT_DIR
-          # Split URLs and run Lighthouse audits
-          for url in $URLS; do
-            # Generate a valid report name
+          while read url; do
             if [ "$url" = "https://market.axonivy.com" ]; then
               REPORT_NAME="home"
             else
               REPORT_NAME=$(echo $url | sed 's|https://market.axonivy.com/||; s|/|-|g')
             fi
             lighthouse $url --output html --output-path $REPORT_DIR/$REPORT_NAME.html --chrome-flags="--headless"
-          done
+          done < batch_${{ matrix.batch }}
 
-      - name: Upload Lighthouse Reports
+      - name: Upload Lighthouse Reports for Batch
         uses: actions/upload-artifact@v4
         with:
           path: lighthouse-reports/
-          name: lighthouse-reports
+          name: lighthouse-reports-${{ matrix.batch }}
