--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -38,12 +38,16 @@ jobs:
             echo "$BASE_URL/$id" >> urls.txt
           done
 
+
       - name: Split URLs into Batches
         id: prepare-batches
         run: |
           # Split URLs into batches of 20
           split -l 20 urls.txt batch_
-          BATCHES=$(ls batch_* | jq -R -s 'split("\n")[:-1]')
+          
+          # Create a JSON array of batch filenames
+          BATCHES=$(ls batch_* | jq -R -s '.')
+          
           echo "Generated batches: $BATCHES"
           echo "batches=$BATCHES" >> $GITHUB_OUTPUT
 
