--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -42,13 +42,18 @@ jobs:
         id: prepare-batches
         run: |
           # Split URLs into batches of 20
-          split -l 20 urls.txt batch_
-          
-          # Create a JSON array of batch filenames
-          BATCHES=$(ls batch_* | jq -R -s '.')
-          
-          echo "Generated batches: $BATCHES"
-          echo "batches=$BATCHES" >> $GITHUB_OUTPUT
+          split -l 20 <(echo $URLS) batch_
+
+          # Rename batch files with numbers
+          counter=1
+          for file in batch_*; do
+            mv "$file" "batch_$counter"
+            counter=$((counter + 1))
+          done
+
+          # Generate JSON array of batch filenames
+          BATCHES=$(ls batch_* | jq -R -s 'split("\n") | map(select(length > 0))')
+          echo "BATCHES=$BATCHES" >> $GITHUB_ENV
 
   lighthouse-audit:
     needs: fetch-and-audit
