--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -52,7 +52,7 @@ jobs:
           done
 
           # Generate JSON array of batch filenames
-          BATCHES=$(ls batch_* | jq -R -s '[.[] | select(length > 0)]')
+          BATCHES=$(printf '%s\n' batch_* | jq -R -s 'split("\n") | map(select(length > 0))')
           echo "BATCHES=$BATCHES" >> $GITHUB_ENV
 
   lighthouse-audit:
