--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -30,11 +30,11 @@ jobs:
           BASE_URL="https://market.axonivy.com"
 
           # Fetch API response
-          RESPONSE=$(curl -s $API_URL)
-          
+          RESPONSE=$(curl -s "$API_URL")
+
           # Build the list of URLs
           echo "$BASE_URL" > urls.txt
-          echo $RESPONSE | jq -r '.["_embedded"]["products"][]["id"]' | while read id; do
+          echo "$RESPONSE" | jq -r '.["_embedded"]["products"][]["id"]' | while read id; do
             echo "$BASE_URL/$id" >> urls.txt
           done
 
@@ -42,17 +42,17 @@ jobs:
         id: prepare-batches
         run: |
           # Split URLs into batches of 20
-          split -l 20 <(echo "$URLS") batch_
+          split -l 20 urls.txt batch_
 
           # Rename batch files with numbers
           counter=1
           for file in batch_*; do
-            mv "$file" "batch_$counter"
+            mv "$file" "batch_$counter.txt"
             counter=$((counter + 1))
           done
 
           # Generate JSON array of batch filenames
-          BATCHES=$(printf '%s\n' batch_* | jq -R -s 'split("\n") | map(select(length > 0))')
+          BATCHES=$(printf '%s\n' batch_*.txt | jq -R -s 'split("\n") | map(select(length > 0))')
           echo "BATCHES=$BATCHES" >> $GITHUB_ENV
 
   lighthouse-audit:
