--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -15,14 +15,14 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install Chrome
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
+      # - name: Install Chrome
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install -y google-chrome-stable
 
-      - name: Install Lighthouse
-        run: |
-          npm install -g lighthouse
+      # - name: Install Lighthouse
+      #   run: |
+      #     npm install -g lighthouse
 
       - name: Fetch Product Data and Generate URLs
         run: |
