--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -45,9 +45,9 @@ jobs:
           split -l 20 urls.txt batch_
 
           # # Generate JSON array of batch filenames
-          # batches=$(printf '%s\n' batch_*.txt | jq -R -s 'split("\n") | map(select(length > 0))')
-          # echo "batches=$batches" >> $GITHUB_ENV
-          # echo "Here: $batches"
+          batches=$(printf '%s\n' batch_*.txt | jq -R -s 'split("\n") | map(select(length > 0))')
+          echo "batches=$batches" >> $GITHUB_ENV
+          echo "Here: $batches"
 
   lighthouse-audit:
     needs: fetch-and-audit
