--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -43,9 +43,10 @@ jobs:
         run: |
           # Split URLs into batches of 20
           split -l 20 urls.txt batch_
-
+          echo "Batches generated: $(ls batch_*.txt | wc -l)"
           # # Generate JSON array of batch filenames
-          batches=$(find . -name 'batch_*.txt' -print0 | xargs -0 printf '"%s", ' | sed 's/, $//')
+          batches=$(ls batch_*.txt | sed 's|^|\"|; s|$|\",|' | tr -d '\n' | sed 's/,$//')
+
           echo "batches=$batches" >> $GITHUB_ENV
           echo "Here: $batches"
 
