--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -42,7 +42,7 @@ jobs:
         id: prepare-batches
         run: |
           # Split URLs into batches of 20
-          split -l 20 urls.txt batch_
+          split -l 20 urls.txt batch_.txt
           ls -l
           echo "Batches generated: $(ls batch_*.txt | wc -l)"
           # # Generate JSON array of batch filenames
