--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -42,9 +42,9 @@ jobs:
         id: prepare-batches
         run: |
           # Split URLs into batches of 20
-          split -l 20 urls.txt batch_.txt
+          split -l 20 urls.txt batch_
           ls -l
-          echo "Batches generated: $(ls batch_*.txt | wc -l)"
+          echo "Batches generated: $(ls batch_* | wc -l)"
           # # Generate JSON array of batch filenames
           batches=$(ls batch_*.txt | sed 's|^|\"|; s|$|\",|' | tr -d '\n' | sed 's/,$//')
 
