--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -41,14 +41,10 @@ jobs:
       - name: Split URLs into Batches
         id: prepare-batches
         run: |
-          # Split URLs into batches of 20
           split -l 5 urls.txt batch_
-          ls -l
-          echo "Batches generated: $(ls batch_* | wc -l)"
-          # # Generate JSON array of batch filenames
           batches=$(ls batch_* | sed 's|^|\"|; s|$|\",|' | tr -d '\n' | sed 's/,$//')
 
-          echo "batches=$batches" >> $GITHUB_ENV
+          echo "batches=[$batches]" >> $GITHUB_ENV
           echo "Here: $batches"
 
   lighthouse-audit:
