--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -11,21 +11,6 @@ jobs:
     outputs:
       batches: ${{ env.batches }}
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install Chrome
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
-
-      - name: Install Lighthouse
-        run: |
-          npm install -g lighthouse
-
       - name: Fetch Product Data and Generate URLs
         run: |
           API_URL="https://market.axonivy.com/marketplace-service/api/product?type=all&language=en&size=1000&isRESTClient=false"
@@ -49,7 +34,6 @@ jobs:
           done | jq -s '.' | tr -d '\n' | sed 's/^[[:space:]]*//;s/[[:space:]]*$//')
 
           echo "batches=${batches}" >> $GITHUB_ENV
-          echo "$batches"
 
   lighthouse-audit:
     needs: fetch-and-audit
@@ -78,14 +62,15 @@ jobs:
           REPORT_DIR: "./lighthouse-reports"
         run: |
           mkdir -p $REPORT_DIR
-          while read url; do
+          echo "Running Lighthouse for batch: ${{ matrix.batch }}"
+          for url in "${{ matrix.batch }}"; do
             if [ "$url" = "https://market.axonivy.com" ]; then
               REPORT_NAME="home"
             else
               REPORT_NAME=$(echo $url | sed 's|https://market.axonivy.com/||; s|/|-|g')
             fi
             lighthouse $url --output html --output-path $REPORT_DIR/$REPORT_NAME.html --chrome-flags="--headless"
-          done < ${{ matrix.batch }}
+          done
 
       - name: Upload Lighthouse Reports for Batch
         uses: actions/upload-artifact@v4
