--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -64,6 +64,7 @@ jobs:
           mkdir -p $REPORT_DIR
           echo "Running Lighthouse for batch: ${{ matrix.batch }}"
           for url in "${{ matrix.batch }}"; do
+            echo "Running Lighthouse for $url"
             if [ "$url" = "https://market.axonivy.com" ]; then
               REPORT_NAME="home"
             else
