--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -62,17 +62,17 @@ jobs:
           REPORT_DIR: "./lighthouse-reports"
         run: |
           mkdir -p $REPORT_DIR
-          echo "What is this: ${{ fromJson(needs.fetch-and-audit.outputs.batches) }}"
+          echo "What is this: ${{ needs.fetch-and-audit.outputs.batches }}"
           echo "Running Lighthouse for batch: ${{ matrix.batch }}"
-          for url in "${{ fromJson(matrix.batch) }}"; do
-            echo "Running Lighthouse for $url"
-            if [ "$url" = "https://market.axonivy.com" ]; then
-              REPORT_NAME="home"
-            else
-              REPORT_NAME=$(echo $url | sed 's|https://market.axonivy.com/||; s|/|-|g')
-            fi
-            lighthouse $url --output html --output-path $REPORT_DIR/$REPORT_NAME.html --chrome-flags="--headless"
-          done
+          # for url in "${{ matrix.batch }}"; do
+          #   echo "Running Lighthouse for $url"
+          #   if [ "$url" = "https://market.axonivy.com" ]; then
+          #     REPORT_NAME="home"
+          #   else
+          #     REPORT_NAME=$(echo $url | sed 's|https://market.axonivy.com/||; s|/|-|g')
+          #   fi
+          #   lighthouse $url --output html --output-path $REPORT_DIR/$REPORT_NAME.html --chrome-flags="--headless"
+          # done
 
       - name: Upload Lighthouse Reports for Batch
         uses: actions/upload-artifact@v4
