--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -30,8 +30,8 @@ jobs:
         run: |
           split -l 20 urls.txt batch_
           batches=$(for batch in batch_*; do
-            cat "$batch" | jq -R -s -c 'split("\n") | map(select(length > 0))'
-          done | jq -s '.' | tr -d '\n' | sed 's/^[[:space:]]*//;s/[[:space:]]*$//')
+            cat "$batch" | jq -R -s -c 'split("\n") | map(select(length > 0))' | jq -r '. | join(",")'
+          done | tr '\n' ',' | sed 's/,$//')
 
           echo "batches=${batches}" >> $GITHUB_ENV
 
@@ -39,7 +39,7 @@ jobs:
     needs: fetch-and-audit
     strategy:
       matrix:
-        batch: ${{ needs.fetch-and-audit.outputs.batches }}
+        batch: ${{ fromJson(needs.fetch-and-audit.outputs.batches) }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
