--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -30,10 +30,11 @@ jobs:
         run: |
           split -l 20 urls.txt batch_
           batches=$(for batch in batch_*; do
-            cat "$batch" | jq -R -s -c 'split("\n") | map(select(length > 0))' | jq -r '. | join(",")'
+            batch_urls=$(cat "$batch" | jq -R -s -c 'split("\n") | map(select(length > 0)) | join(",")')
+            echo "$batch_urls"
           done | tr '\n' ',' | sed 's/,$//')
 
-          echo "batches=${batches}" >> $GITHUB_ENV
+          echo "batches=[$batches]" >> $GITHUB_ENV
 
   lighthouse-audit:
     needs: fetch-and-audit
