--- a/.github/workflows/lighthouse-accessibility-check.yml
+++ b/.github/workflows/lighthouse-accessibility-check.yml
@@ -63,20 +63,24 @@ jobs:
           REPORT_DIR: "./lighthouse-reports"
         run: |
           mkdir -p $REPORT_DIR
-          echo "What is this: ${{ needs.fetch-and-audit.outputs.batches }}"
-          echo "Running Lighthouse for batch: ${{ matrix.batch }}"
-          # for url in "${{ matrix.batch }}"; do
-          #   echo "Running Lighthouse for $url"
-          #   if [ "$url" = "https://market.axonivy.com" ]; then
-          #     REPORT_NAME="home"
-          #   else
-          #     REPORT_NAME=$(echo $url | sed 's|https://market.axonivy.com/||; s|/|-|g')
-          #   fi
-          #   lighthouse $url --output html --output-path $REPORT_DIR/$REPORT_NAME.html --chrome-flags="--headless"
-          # done
+          IFS=',' read -r -a urls <<< "${{ matrix.batch }}"
 
-      - name: Upload Lighthouse Reports for Batch
+          for url in "${urls[@]}"; do
+            echo "Running Lighthouse for $url"
+
+            # Determine the report name based on the URL
+            if [ "$url" = "https://market.axonivy.com" ]; then
+              REPORT_NAME="home"
+            else
+              REPORT_NAME=$(echo $url | sed 's|https://market.axonivy.com/||; s|/|-|g')
+            fi
+
+            # Run Lighthouse for the URL and save the report
+            lighthouse $url --output html --output-path $REPORT_DIR/$REPORT_NAME.html --chrome-flags="--headless"
+          done
+
+      - name: Upload Lighthouse Reports
         uses: actions/upload-artifact@v4
         with:
           path: lighthouse-reports/
-          name: lighthouse-reports-${{ matrix.batch }}
+          name: lighthouse-reports-tmp
