--- a/.github/workflows/lighthouse-accessibility-check-reuse.yml
+++ b/.github/workflows/lighthouse-accessibility-check-reuse.yml
@@ -37,7 +37,7 @@ jobs:
 
           # Join all lines in urls.txt into a single string, with each URL on a new line
           URLs=$(urls.txt | tr '\n' ',')
-          URLs=$(echo "$URLs" | sed 's/[[:space:]]*,/,/g' | sed 's/[[:space:]]*$//')
+          URLs="${URLs%,}"
           # Save the URLs to the environment variable for later use
           echo "urls=$URLs" >> $GITHUB_ENV
       - run: mkdir -p ${{ github.workspace }}/tmp/artifacts
